objects/Talk_Talk_POC__c.object
<CustomObject>
    <label>Talk Talk POC</label>
    <nameField>
        <displayFormat>TTB-{000}</displayFormat>
        <label>Talk Talk POC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talk Talk POC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>deepankur__c</fullName>
        <defaultValue>false</defaultValue>
        <description>helloo world description</description>
        <label>deepankur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_No__c</fullName>
        <externalId>true</externalId>
        <label>Customer No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
</CustomObject>